# AmyloidBench

./: APPNN_analysis.R  CONDA.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
amyloidbench/: __init__.py
amyloidbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amyloidbench/benchmark/: __init__.py  datasets.py  metrics.py  polymorph_benchmark.py  reference_datasets.py  runner.py  statistics.py
amyloidbench/classification/: __init__.py  polymorph.py
amyloidbench/cli/: __init__.py  main.py
amyloidbench/consensus/: __init__.py
amyloidbench/core/: __init__.py  models.py  sequence.py  structure.py
amyloidbench/features/: __init__.py  extraction.py
amyloidbench/predictors/: __init__.py  base.py  export.py  output_models.py
amyloidbench/predictors/local/: __init__.py  aggrescan3d.py  algorithms.py  fallback.py
amyloidbench/predictors/local/reimplemented/: __init__.py  foldamyloid.py
amyloidbench/predictors/remote/: __init__.py  base.py  pasta2.py  waltz.py
amyloidbench/predictors/standalone/: appnn.py  path.py
amyloidbench/predictors/web/: aggrescan.py  archcandy.py  base.py  crossbeta.py  pasta2.py  waltz.py
amyloidbench/visualization/: __init__.py  benchmark_plots.py  plots.py  profiles.py  reports.py  statistical_plots.py
benchmark_results/: benchmark_results.json
conda-recipe/: bld.bat  build.sh  meta.yaml
docs/: PREDICTOR_IMPLEMENTATION_STRATEGY.md  WRAPPER_DEVELOPMENT_GUIDE.md
examples/: basic_usage.py
tests/: __init__.py  test_core.py  test_models.py  test_phase2_predictors.py  test_phase3.py  test_phase4_classification.py  test_phase4_polymorph.py  test_phase5_benchmark.py  test_phase5_extended.py  test_phase6_statistical_viz.py  test_phase6_visualization.py  test_predictors.py  test_sequence.py
