[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amyloidbench"
version = "0.1.0"
description = "Comprehensive consensus meta-predictor and benchmark suite for protein amyloidogenicity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Xenia", email = "xenia@arriam.ru"}
]
keywords = [
    "amyloid",
    "protein aggregation",
    "bioinformatics",
    "machine learning",
    "consensus predictor",
    "APR prediction"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core scientific stack
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "biopython>=1.81",
    
    # Machine learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    
    # Web automation for remote predictors
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    
    # Structural biology
    "biotite>=0.38.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
    
    # CLI and utilities
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "tqdm>=4.66.0",
    
    # Caching and persistence
    "diskcache>=5.6.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
structural = [
    # For ESMFold / structure prediction integration
    "torch>=2.0.0",
    "fair-esm>=2.0.0",
]
r-integration = [
    "rpy2>=3.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
amyloidbench = "amyloidbench.cli.main:cli"

[project.urls]
Homepage = "https://github.com/arriam/amyloidbench"
Documentation = "https://amyloidbench.readthedocs.io"
Repository = "https://github.com/arriam/amyloidbench"
Issues = "https://github.com/arriam/amyloidbench/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["amyloidbench*"]

[tool.setuptools.package-data]
amyloidbench = ["data/*.json", "data/*.csv"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=amyloidbench --cov-report=term-missing"
